--- a/style.css
+++ b/style.css
@@ -22,5 +22,25 @@
     --clr-neutral-hsl-300: hsl(var(--clr-neutral-hsl-300));
     --clr-neutral-hsl-700: hsl(var(--clr-neutral-hsl-700));
 
+    --clr-primary-hsl-400: hsl(var(--clr-primary-hsl-400));
+    --clr-primary-hsl-500: hsla(var(--clr-primary-hsl-500)); 
+    --clr-secondary-hsl-400: hls(var(clr-secondary-hsl-400)); 
+
+    --gradient-primary: linear-gradient(
+        var(--clr-primary-hsl-400),
+        var(--clr-secondary-400));
+
+    --gradient-to-transparent: linear-gradient(
+        var(--clr-primary-500),
+        var(--clr-secondary-hsl-400));
+
+    --clr-red:
+    --clr-yellow:
+    --clr-green:
+    --clr-blue:
+    
+
+
+
 
 }
