--- a/style.css
+++ b/style.css
@@ -45,7 +45,14 @@
     --fw-bold: 700;
     --fw-black: 800;
 
-    
+    --fs-400: 1.125rem;
+    --fs-500: 1.25rem;
+    --fs-600: 1.5rem;
+    --fs-700: 1.75rem;
+    --fs-800: 2rem;
+    --fs-900: 5rem;
+
+
     
 
 
