--- a/style.css
+++ b/style.css
@@ -75,3 +75,16 @@ body {
   font-size: var(--fs-400);
   color: var(--clr-neutral-700);
 }
+
+@media (min-width: 600px) {
+    body {
+        min-height: 100vh;
+        display: grid;
+        place-items: center;
+    }
+}
+
+.section-title {
+    font-weight: var(--fw-bold);
+    font-size: var(--fs-600);
+}
