--- a/style.css
+++ b/style.css
@@ -98,7 +98,36 @@ body {
     border-radius: 100vw;
     cursor: pointer;
 }
+
 .button:hover,
 .button:focus-visible {
   background: var(--gradient-primary);
 }
+
+.result-summary {
+  --padding: 2.5rem;
+  --border-redius: 2rem;
+  max-width: 46rem;
+  display: grid;
+}
+ @media (min-width: 600px) {
+  .result-summary {
+    grid-template-columns: 1fr 1fr;
+    border-radius: var(--border-redius);
+    overflow: hidden;
+    box-shadow: .5rem 1rem 3rem
+     hsl(var(--clr-neutral-hsl-700), .2);
+  }
+ }
+
+ .reults {
+  text-align: center;
+  border-radius: var(--border-redius);
+  background: var(--gradient-primary);
+  color: hsl(var(--clr-neutral-hsl-100), 7)
+
+ }
+ .reults,
+ .summary {
+  padding: var(--padding);
+ }
