--- a/style.css
+++ b/style.css
@@ -177,4 +177,10 @@ body {
   font-weight: var(--fw-bold);
  }
 
- .
+.summary-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  border-radius: .5rem;
+}
