--- a/style.css
+++ b/style.css
@@ -85,6 +85,13 @@ body {
     }
 }
 
+.flex-group {
+  display: flex;
+  align-items: center;
+  gap: .5rem;
+  flex-wrap: wrap;
+}
+
 .grid-flow {
   display: grid;
   align-content: start;
@@ -183,4 +190,8 @@ body {
   align-items: center;
   padding: 1rem;
   border-radius: .5rem;
+  background-color: lightblue;
+}
+.summary-item svg {
+  stroke: red;
 }
