--- a/style.css
+++ b/style.css
@@ -36,7 +36,6 @@
     var(--clr-primary-500),
     hsl(var(--clr-secondary-hsl-500))
   );
-  
 
   --clr-accent-1: 0, 100%, 67%;
   --clr-accent-2: 39, 100%, 56%;
@@ -78,17 +77,17 @@ body {
 }
 
 @media (min-width: 600px) {
-    body {
-        min-height: 100vh;
-        display: grid;
-        place-items: center;
-    }
+  body {
+    min-height: 100vh;
+    display: grid;
+    place-items: center;
+  }
 }
 
 .flex-group {
   display: flex;
   align-items: center;
-  gap: .5rem;
+  gap: 0.5rem;
   flex-wrap: wrap;
 }
 
@@ -103,9 +102,9 @@ body {
 }
 
 .section-title {
-    font-weight: var(--fw-bold);
-    font-size: var(--fs-600);
-  }
+  font-weight: var(--fw-bold);
+  font-size: var(--fs-600);
+}
 
 .result-score {
   display: grid;
@@ -115,24 +114,24 @@ body {
   background: var(--gradient-to-transparent);
   aspect-ratio: 1 / 1;
   border-radius: 50%;
-  }
+}
 
-  .result-score span {
-    display: block;
-    font-size: var(--fs-900);
-    font-weight: var(--fw-black);
-    line-height: 1;
-    color: var(--clr-neutral-100);
-  }
+.result-score span {
+  display: block;
+  font-size: var(--fs-900);
+  font-weight: var(--fw-black);
+  line-height: 1;
+  color: var(--clr-neutral-100);
+}
 
 .button {
-    color: var(--clr-neutral-100);
-    line-height: 1;
-    background: var(--clr-neutral-700);
-    padding: 1rem 2rem;
-    border: 0;
-    border-radius: 100vw;
-    cursor: pointer;
+  color: var(--clr-neutral-100);
+  line-height: 1;
+  background: var(--clr-neutral-700);
+  padding: 1rem 2rem;
+  border: 0;
+  border-radius: 100vw;
+  cursor: pointer;
 }
 
 .button:hover,
@@ -147,51 +146,72 @@ body {
   display: grid;
 }
 
- @media (min-width: 600px) {
+@media (min-width: 600px) {
   .result-summary {
     margin-inline: 1rem;
     grid-template-columns: 1fr 1fr;
     border-radius: var(--border-redius);
     overflow: hidden;
-    box-shadow: .5rem 1rem 3rem
-     hsl(var(--clr-neutral-hsl-700), .2);
+    box-shadow: 0.5rem 1rem 3rem hsl(var(--clr-neutral-hsl-700), 0.2);
   }
- }
+}
 
- .reults {
-  border-radius: 
-    0 0 var(--border-redius)  var(--border-redius) ;
+.reults {
+  border-radius: 0 0 var(--border-redius) var(--border-redius);
   text-align: center;
   background: var(--gradient-primary);
-  color: hsl(var(--clr-neutral-hsl-100), 0.7)
-  
- }
-
+  color: hsl(var(--clr-neutral-hsl-100), 0.7);
+}
 
 @media (min-width: 600px) {
   .result {
     border-radius: var(--border-redius);
   }
 }
- .reults,
- .summary {
+.reults,
+.summary {
   padding: var(--padding);
- }
+}
 
- .result-rank {
+.result-rank {
   color: var(--clr-neutral-100);
   font-size: var(--fs-700);
   font-weight: var(--fw-bold);
- }
+}
 
 .summary-item {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
-  border-radius: .5rem;
-  background-color: lightblue;
+  border-radius: 0.5rem;
+  background-color: hsl(var(--item-color), 0.1);
 }
 .summary-item svg {
-  stroke: red;
+  stroke: hsl(var(--item-color));
+}
+
+.summary-item-title {
+  color: hsl(var(--item-color));
+  font-weight: var(--fw-bold);
+}
+
+.flex-group {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  flex-wrap: wrap;
+}
+
+.summary-item[data-item-type="accent-1"] {
+  --item-color: var(--clr-accent-1);
+}
+.summary-item[data-item-type="accent-2"] {
+  --item-color: var(--clr-accent-2);
+}
+.summary-item[data-item-type="accent-3"] {
+  --item-color: var(--clr-accent-3);
+}
+.summary-item[data-item-type="accent-4"] {
+  --item-color: var(--clr-accent-4);
 }
